--- a/BabyRecognitionProgram/app/src/main/AndroidManifest.xml
+++ b/BabyRecognitionProgram/app/src/main/AndroidManifest.xml
@@ -10,6 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SlideShowActivity"
+            android:label="@string/title_activity_slide_show"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.themattburton.cs449.babyrecognitionprogram.MainActivity" />
+        </activity>
+        <activity
+            android:name=".CreateNewCard"
+            android:label="@string/title_activity_create_new_card"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
@@ -22,9 +35,7 @@
         <activity
             android:name=".SlideReviewActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
