--- a/BabyRecognitionProgram/app/src/main/AndroidManifest.xml
+++ b/BabyRecognitionProgram/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.themattburton.cs449.babyrecognitionprogram">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_brp_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_brp_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -34,7 +36,7 @@
         </activity>
         <activity
             android:name=".SlideReviewActivity"
-            android:label="@string/app_name"
+            android:label="Edit Cards"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
