--- a/BabyRecognitionProgram/app/src/main/AndroidManifest.xml
+++ b/BabyRecognitionProgram/app/src/main/AndroidManifest.xml
@@ -12,20 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SlideShowActivity"
+            android:name=".activities.SlideShowActivity"
             android:label="@string/title_activity_slide_show"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.themattburton.cs449.babyrecognitionprogram.MainActivity" />
+                android:value="com.themattburton.cs449.babyrecognitionprogram.activities.MainActivity" />
         </activity>
         <activity
-            android:name=".CreateNewCard"
+            android:name=".activities.CreateNewCard"
             android:label="@string/title_activity_create_new_card"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -35,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SlideReviewActivity"
+            android:name=".activities.SlideReviewActivity"
             android:label="Edit Cards"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
